--- a/css/custom-css.css
+++ b/css/custom-css.css
@@ -8142,7 +8142,7 @@ body.elementor-page-10970>.elementor-motion-effects-container>.elementor-motion-
 
 .elementor-82 .elementor-element.elementor-element-4e7d176:not(.elementor-motion-effects-element-type-background),
 .elementor-82 .elementor-element.elementor-element-4e7d176>.elementor-motion-effects-container>.elementor-motion-effects-layer {
-    background-image: url("../upload/vitrine.jpg");
+    background-image: url("../upload/vitrine-4.jpg");
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
