troca de cores da identidade visual

--- a/css/custom-css.css
+++ b/css/custom-css.css
@@ -806,7 +806,7 @@ body:not(.rtl) .elementor-5993 .elementor-element.elementor-element-4d805d2 .ele
 }
 
 .elementor-6135 .elementor-element.elementor-element-ff8bad8 .themegoods-animated-headline span.ah-words-wrapper {
-    color: #1C58F6;
+    color: #F3DAD3;
 }
 
 .elementor-6135 .elementor-element.elementor-element-ff8bad8 .themegoods-animated-headline span.ah-words-wrapper b {
@@ -1187,7 +1187,7 @@ body:not(.rtl) .elementor-6135 .elementor-element.elementor-element-067e229 .ele
     line-height: 1.8em;
     fill: #FFFFFF;
     color: #FFFFFF;
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
     border-radius: 25px 25px 25px 25px;
 }
 
@@ -1739,7 +1739,7 @@ body:not(.rtl) .elementor-6135 .elementor-element.elementor-element-067e229 .ele
 }
 
 .elementor-10675 .elementor-element.elementor-element-b5e37b5 .elementor-heading-title {
-    color: #1C58F6;
+    color: #F3DAD3;
     font-family: "Poppins", Sans-serif;
     font-size: 20px;
     font-weight: 700;
@@ -1912,7 +1912,7 @@ body:not(.rtl) .elementor-6135 .elementor-element.elementor-element-067e229 .ele
 
 .elementor-10675 .elementor-element.elementor-element-16c51e2 .portfolio-classic-grid-wrapper .portfolio-classic-img .portfolio-classic-img-overlay {
     background-color: transparent;
-    background-image: linear-gradient(180deg, #1C58F6AD 0%, #FF9200C4 100%);
+    background-image: linear-gradient(180deg, #F3DAD3AD 0%, #FF9200C4 100%);
 }
 
 .elementor-10675 .elementor-element.elementor-element-16c51e2 .portfolio-classic-grid-wrapper .portfolio-classic-img .portfolio-classic-img-overlay i {
@@ -2239,7 +2239,7 @@ body:not(.rtl) .elementor-6135 .elementor-element.elementor-element-067e229 .ele
     line-height: 1.8em;
     fill: #FFFFFF;
     color: #FFFFFF;
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
     border-radius: 25px 25px 25px 25px;
     padding: 13px 50px 13px 50px;
 }
@@ -6287,7 +6287,7 @@ body.elementor-page-10970>.elementor-motion-effects-container>.elementor-motion-
 }
 
 .elementor-12022 .elementor-element.elementor-element-5569d68 .elementor-heading-title {
-    color: #1C58F6;
+    color: #F3DAD3;
     font-family: "Poppins", Sans-serif;
     font-size: 20px;
     font-weight: 700;
@@ -6460,7 +6460,7 @@ body.elementor-page-10970>.elementor-motion-effects-container>.elementor-motion-
 
 .elementor-12022 .elementor-element.elementor-element-0d16f33 .portfolio-classic-grid-wrapper .portfolio-classic-img .portfolio-classic-img-overlay {
     background-color: transparent;
-    background-image: linear-gradient(180deg, #1C58F6AD 0%, #FF9200C4 100%);
+    background-image: linear-gradient(180deg, #F3DAD3AD 0%, #FF9200C4 100%);
 }
 
 .elementor-12022 .elementor-element.elementor-element-0d16f33 .portfolio-classic-grid-wrapper .portfolio-classic-img .portfolio-classic-img-overlay i {
@@ -6787,7 +6787,7 @@ body.elementor-page-10970>.elementor-motion-effects-container>.elementor-motion-
     line-height: 1.8em;
     fill: #FFFFFF;
     color: #FFFFFF;
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
     border-radius: 25px 25px 25px 25px;
     padding: 13px 50px 13px 50px;
 }
@@ -7868,12 +7868,12 @@ body.elementor-page-10970>.elementor-motion-effects-container>.elementor-motion-
 }
 
 .elementor-28 .elementor-element.elementor-element-29a090a .themegoods-navigation-wrapper .nav li ul li a:hover {
-    color: #1C58F6;
+    color: #F3DAD3;
 }
 
 .elementor-28 .elementor-element.elementor-element-29a090a .themegoods-navigation-wrapper .nav li ul li a:before,
 .elementor-28 .elementor-element.elementor-element-29a090a .themegoods-navigation-wrapper .nav li ul li>a:before {
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
 }
 
 .elementor-28 .elementor-element.elementor-element-29a090a .themegoods-navigation-wrapper .nav li ul>li.current-menu-item>a,
@@ -7882,7 +7882,7 @@ body.elementor-page-10970>.elementor-motion-effects-container>.elementor-motion-
 .elementor-28 .elementor-element.elementor-element-29a090a .themegoods-navigation-wrapper .nav li ul li ul:not(.sub-menu) li.current-menu-item a,
 .elementor-28 .elementor-element.elementor-element-29a090a .themegoods-navigation-wrapper .nav li ul li.current-menu-parent ul li.current-menu-item a,
 .elementor-28 .elementor-element.elementor-element-29a090a .themegoods-navigation-wrapper .nav li.current-menu-parent ul>li.current-menu-item>a {
-    color: #1C58F6;
+    color: #F3DAD3;
 }
 
 .elementor-28 .elementor-element.elementor-element-29a090a .themegoods-navigation-wrapper .nav li ul>li.current-menu-item>a:before,
@@ -7890,7 +7890,7 @@ body.elementor-page-10970>.elementor-motion-effects-container>.elementor-motion-
 .elementor-28 .elementor-element.elementor-element-29a090a .themegoods-navigation-wrapper .nav li ul>li.current-menu-ancestor>a:before,
 .elementor-28 .elementor-element.elementor-element-29a090a .themegoods-navigation-wrapper .nav li ul li ul:not(.sub-menu) li.current-menu-item a:before,
 .elementor-28 .elementor-element.elementor-element-29a090a .themegoods-navigation-wrapper .nav li ul li.current-menu-parent ul li.current-menu-item a:before {
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
 }
 
 .elementor-28 .elementor-element.elementor-element-29a090a {
@@ -7971,24 +7971,25 @@ body.elementor-page-10970>.elementor-motion-effects-container>.elementor-motion-
     font-size: 13px;
     font-weight: 600;
     line-height: 1.7em;
-    fill: #FFFFFF;
-    color: #FFFFFF;
-    background-color: #1C58F6;
+    fill: #000;
+    color: #000;
+    background-color: #F3DAD3;
     border-style: solid;
     border-width: 2px 2px 2px 2px;
-    border-color: #1C58F6;
+    border-color: #F3DAD3;
     border-radius: 25px 25px 25px 25px;
 }
 
 .elementor-28 .elementor-element.elementor-element-0f3de7f .elementor-button:hover,
 .elementor-28 .elementor-element.elementor-element-0f3de7f .elementor-button:focus {
-    color: #1C58F6;
+    color: #A48745;
     background-color: #FFFFFF00;
+    border-color: #A48745;
 }
 
 .elementor-28 .elementor-element.elementor-element-0f3de7f .elementor-button:hover svg,
 .elementor-28 .elementor-element.elementor-element-0f3de7f .elementor-button:focus svg {
-    fill: #1C58F6;
+    fill: #F3DAD3;
 }
 
 .elementor-28 .elementor-element.elementor-element-0f3de7f {
@@ -8308,9 +8309,9 @@ body.rtl .elementor-82 .elementor-element.elementor-element-3878d5f {
     font-size: 15px;
     font-weight: 600;
     line-height: 1.8em;
-    fill: #FFFFFF;
-    color: #FFFFFF;
-    background-color: #1C58F6;
+    fill: #000;
+    color: #000;
+    background-color: #F3DAD3;
     border-radius: 25px 25px 25px 25px;
 }
 
@@ -8366,7 +8367,7 @@ body.rtl .elementor-82 .elementor-element.elementor-element-3878d5f {
 }
 
 .elementor-82 .elementor-element.elementor-element-fd2c3d0 .elementor-heading-title {
-    color: #1C58F6;
+    color: #F3DAD3;
     font-size: 20px;
     font-weight: 600;
 }
@@ -8462,7 +8463,7 @@ body.rtl .elementor-82 .elementor-element.elementor-element-affc5ef {
 }
 
 .elementor-82 .elementor-element.elementor-element-1c3b923 .service-carousel-wrapper .item:hover .service-carousel-link-button .service-carousel-link-label {
-    color: #ffffff;
+    color: #A48745;
 }
 
 .elementor-82 .elementor-element.elementor-element-1c3b923 .service-carousel-wrapper .owl-carousel .owl-dots .owl-dot span {
@@ -9060,18 +9061,18 @@ body.rtl .elementor-82 .elementor-element.elementor-element-77ec3ed {
 }
 
 .elementor-82 .elementor-element.elementor-element-db9a8d2.elementor-view-stacked .elementor-icon {
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
 }
 
 .elementor-82 .elementor-element.elementor-element-db9a8d2.elementor-view-framed .elementor-icon,
 .elementor-82 .elementor-element.elementor-element-db9a8d2.elementor-view-default .elementor-icon {
-    color: #1C58F6;
-    border-color: #1C58F6;
+    color: #F3DAD3;
+    border-color: #F3DAD3;
 }
 
 .elementor-82 .elementor-element.elementor-element-db9a8d2.elementor-view-framed .elementor-icon,
 .elementor-82 .elementor-element.elementor-element-db9a8d2.elementor-view-default .elementor-icon svg {
-    fill: #1C58F6;
+    fill: #F3DAD3;
 }
 
 .elementor-82 .elementor-element.elementor-element-db9a8d2 .elementor-icon {
@@ -9132,18 +9133,18 @@ body.rtl .elementor-82 .elementor-element.elementor-element-77ec3ed {
 }
 
 .elementor-82 .elementor-element.elementor-element-fa1ee8c.elementor-view-stacked .elementor-icon {
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
 }
 
 .elementor-82 .elementor-element.elementor-element-fa1ee8c.elementor-view-framed .elementor-icon,
 .elementor-82 .elementor-element.elementor-element-fa1ee8c.elementor-view-default .elementor-icon {
-    color: #1C58F6;
-    border-color: #1C58F6;
+    color: #F3DAD3;
+    border-color: #F3DAD3;
 }
 
 .elementor-82 .elementor-element.elementor-element-fa1ee8c.elementor-view-framed .elementor-icon,
 .elementor-82 .elementor-element.elementor-element-fa1ee8c.elementor-view-default .elementor-icon svg {
-    fill: #1C58F6;
+    fill: #F3DAD3;
 }
 
 .elementor-82 .elementor-element.elementor-element-fa1ee8c .elementor-icon {
@@ -9240,18 +9241,18 @@ body.rtl .elementor-82 .elementor-element.elementor-element-77ec3ed {
 }
 
 .elementor-82 .elementor-element.elementor-element-f15c727.elementor-view-stacked .elementor-icon {
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
 }
 
 .elementor-82 .elementor-element.elementor-element-f15c727.elementor-view-framed .elementor-icon,
 .elementor-82 .elementor-element.elementor-element-f15c727.elementor-view-default .elementor-icon {
-    color: #1C58F6;
-    border-color: #1C58F6;
+    color: #F3DAD3;
+    border-color: #F3DAD3;
 }
 
 .elementor-82 .elementor-element.elementor-element-f15c727.elementor-view-framed .elementor-icon,
 .elementor-82 .elementor-element.elementor-element-f15c727.elementor-view-default .elementor-icon svg {
-    fill: #1C58F6;
+    fill: #F3DAD3;
 }
 
 .elementor-82 .elementor-element.elementor-element-f15c727 .elementor-icon {
@@ -9344,7 +9345,7 @@ body.rtl .elementor-82 .elementor-element.elementor-element-77ec3ed {
 }
 
 .elementor-82 .elementor-element.elementor-element-86ac4bd .elementor-heading-title {
-    color: #1C58F6;
+    color: #F3DAD3;
     font-size: 20px;
     font-weight: 600;
 }
@@ -9612,7 +9613,7 @@ body.rtl .elementor-82 .elementor-element.elementor-element-77ec3ed {
 
 .elementor-82 .elementor-element.elementor-element-8765c55 .testimonial-carousel .owl-next:hover,
 .testimonial-carousel .owl-prev:hover {
-    background: #1C58F6;
+    background: #F3DAD3;
 }
 
 .elementor-82 .elementor-element.elementor-element-8765c55 .testimonial-carousel .owl-next:hover .arrow-right:after,
@@ -9711,7 +9712,7 @@ body.rtl .elementor-82 .elementor-element.elementor-element-b7ac8be {
 }
 
 .elementor-82 .elementor-element.elementor-element-1ca3511 .elementor-heading-title {
-    color: #1C58F6;
+    color: #F3DAD3;
     font-size: 20px;
     font-weight: 600;
 }
@@ -9849,7 +9850,7 @@ body.rtl .elementor-82 .elementor-element.elementor-element-b7ac8be {
     line-height: 1.8em;
     fill: #FFFFFF;
     color: #FFFFFF;
-    background-color: #1C58F6;
+    background-color: #A48745;
     border-radius: 25px 25px 25px 25px;
     padding: 13px 50px 13px 50px;
 }
@@ -13219,12 +13220,12 @@ body:not(.rtl) .elementor-728 .elementor-element.elementor-element-3afee47 .elem
 }
 
 .elementor-890 .elementor-element.elementor-element-4d1204c .themegoods-navigation-wrapper .nav li ul li a:hover {
-    color: #1C58F6;
+    color: #F3DAD3;
 }
 
 .elementor-890 .elementor-element.elementor-element-4d1204c .themegoods-navigation-wrapper .nav li ul li a:before,
 .elementor-890 .elementor-element.elementor-element-4d1204c .themegoods-navigation-wrapper .nav li ul li>a:before {
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
 }
 
 .elementor-890 .elementor-element.elementor-element-4d1204c .themegoods-navigation-wrapper .nav li ul>li.current-menu-item>a,
@@ -13233,7 +13234,7 @@ body:not(.rtl) .elementor-728 .elementor-element.elementor-element-3afee47 .elem
 .elementor-890 .elementor-element.elementor-element-4d1204c .themegoods-navigation-wrapper .nav li ul li ul:not(.sub-menu) li.current-menu-item a,
 .elementor-890 .elementor-element.elementor-element-4d1204c .themegoods-navigation-wrapper .nav li ul li.current-menu-parent ul li.current-menu-item a,
 .elementor-890 .elementor-element.elementor-element-4d1204c .themegoods-navigation-wrapper .nav li.current-menu-parent ul>li.current-menu-item>a {
-    color: #1C58F6;
+    color: #F3DAD3;
 }
 
 .elementor-890 .elementor-element.elementor-element-4d1204c .themegoods-navigation-wrapper .nav li ul>li.current-menu-item>a:before,
@@ -13241,7 +13242,7 @@ body:not(.rtl) .elementor-728 .elementor-element.elementor-element-3afee47 .elem
 .elementor-890 .elementor-element.elementor-element-4d1204c .themegoods-navigation-wrapper .nav li ul>li.current-menu-ancestor>a:before,
 .elementor-890 .elementor-element.elementor-element-4d1204c .themegoods-navigation-wrapper .nav li ul li ul:not(.sub-menu) li.current-menu-item a:before,
 .elementor-890 .elementor-element.elementor-element-4d1204c .themegoods-navigation-wrapper .nav li ul li.current-menu-parent ul li.current-menu-item a:before {
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
 }
 
 .elementor-890 .elementor-element.elementor-element-4d1204c {
@@ -13256,22 +13257,22 @@ body:not(.rtl) .elementor-728 .elementor-element.elementor-element-3afee47 .elem
     line-height: 1.7em;
     fill: #FFFFFF;
     color: #FFFFFF;
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
     border-style: solid;
     border-width: 2px 2px 2px 2px;
-    border-color: #1C58F6;
+    border-color: #F3DAD3;
     border-radius: 25px 25px 25px 25px;
 }
 
 .elementor-890 .elementor-element.elementor-element-9365512 .elementor-button:hover,
 .elementor-890 .elementor-element.elementor-element-9365512 .elementor-button:focus {
-    color: #1C58F6;
+    color: #F3DAD3;
     background-color: #FFFFFF00;
 }
 
 .elementor-890 .elementor-element.elementor-element-9365512 .elementor-button:hover svg,
 .elementor-890 .elementor-element.elementor-element-9365512 .elementor-button:focus svg {
-    fill: #1C58F6;
+    fill: #F3DAD3;
 }
 
 .elementor-890 .elementor-element.elementor-element-9365512 {
@@ -44585,7 +44586,7 @@ body.rtl .elementor-3373 .elementor-element.elementor-element-9eb6da4 {
 }
 
 .elementor-3373 .elementor-element.elementor-element-6df9c31 .elementor-heading-title {
-    color: #1C58F6;
+    color: #F3DAD3;
     font-size: 20px;
     font-weight: 600;
 }
@@ -52785,18 +52786,18 @@ body.rtl .elementor-5198 .elementor-element.elementor-element-c9650d2 {
 }
 
 .elementor-5289 .elementor-element.elementor-element-5e00494.elementor-view-stacked .elementor-icon {
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
 }
 
 .elementor-5289 .elementor-element.elementor-element-5e00494.elementor-view-framed .elementor-icon,
 .elementor-5289 .elementor-element.elementor-element-5e00494.elementor-view-default .elementor-icon {
-    color: #1C58F6;
-    border-color: #1C58F6;
+    color: #F3DAD3;
+    border-color: #F3DAD3;
 }
 
 .elementor-5289 .elementor-element.elementor-element-5e00494.elementor-view-framed .elementor-icon,
 .elementor-5289 .elementor-element.elementor-element-5e00494.elementor-view-default .elementor-icon svg {
-    fill: #1C58F6;
+    fill: #F3DAD3;
 }
 
 .elementor-5289 .elementor-element.elementor-element-5e00494 .elementor-icon {
@@ -52857,18 +52858,18 @@ body.rtl .elementor-5198 .elementor-element.elementor-element-c9650d2 {
 }
 
 .elementor-5289 .elementor-element.elementor-element-78706fc.elementor-view-stacked .elementor-icon {
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
 }
 
 .elementor-5289 .elementor-element.elementor-element-78706fc.elementor-view-framed .elementor-icon,
 .elementor-5289 .elementor-element.elementor-element-78706fc.elementor-view-default .elementor-icon {
-    color: #1C58F6;
-    border-color: #1C58F6;
+    color: #F3DAD3;
+    border-color: #F3DAD3;
 }
 
 .elementor-5289 .elementor-element.elementor-element-78706fc.elementor-view-framed .elementor-icon,
 .elementor-5289 .elementor-element.elementor-element-78706fc.elementor-view-default .elementor-icon svg {
-    fill: #1C58F6;
+    fill: #F3DAD3;
 }
 
 .elementor-5289 .elementor-element.elementor-element-78706fc .elementor-icon {
@@ -52965,18 +52966,18 @@ body.rtl .elementor-5198 .elementor-element.elementor-element-c9650d2 {
 }
 
 .elementor-5289 .elementor-element.elementor-element-6d38e56.elementor-view-stacked .elementor-icon {
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
 }
 
 .elementor-5289 .elementor-element.elementor-element-6d38e56.elementor-view-framed .elementor-icon,
 .elementor-5289 .elementor-element.elementor-element-6d38e56.elementor-view-default .elementor-icon {
-    color: #1C58F6;
-    border-color: #1C58F6;
+    color: #F3DAD3;
+    border-color: #F3DAD3;
 }
 
 .elementor-5289 .elementor-element.elementor-element-6d38e56.elementor-view-framed .elementor-icon,
 .elementor-5289 .elementor-element.elementor-element-6d38e56.elementor-view-default .elementor-icon svg {
-    fill: #1C58F6;
+    fill: #F3DAD3;
 }
 
 .elementor-5289 .elementor-element.elementor-element-6d38e56 .elementor-icon {
@@ -56679,7 +56680,7 @@ body.rtl .elementor-5198 .elementor-element.elementor-element-c9650d2 {
     line-height: 1.8em;
     fill: #FFFFFF;
     color: #FFFFFF;
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
     border-radius: 25px 25px 25px 25px;
 }
 
@@ -56857,7 +56858,7 @@ body:not(.rtl) .elementor-5579 .elementor-element.elementor-element-51a3b79 .ele
 }
 
 .elementor-5579 .elementor-element.elementor-element-80653f9 .elementor-progress-wrapper .elementor-progress-bar {
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
 }
 
 .elementor-5579 .elementor-element.elementor-element-80653f9 .elementor-progress-wrapper {
@@ -56881,7 +56882,7 @@ body:not(.rtl) .elementor-5579 .elementor-element.elementor-element-51a3b79 .ele
 }
 
 .elementor-5579 .elementor-element.elementor-element-71fcdc1 .elementor-progress-wrapper .elementor-progress-bar {
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
 }
 
 .elementor-5579 .elementor-element.elementor-element-71fcdc1 .elementor-progress-wrapper {
@@ -56905,7 +56906,7 @@ body:not(.rtl) .elementor-5579 .elementor-element.elementor-element-51a3b79 .ele
 }
 
 .elementor-5579 .elementor-element.elementor-element-1668aeb .elementor-progress-wrapper .elementor-progress-bar {
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
 }
 
 .elementor-5579 .elementor-element.elementor-element-1668aeb .elementor-progress-wrapper {
@@ -56929,7 +56930,7 @@ body:not(.rtl) .elementor-5579 .elementor-element.elementor-element-51a3b79 .ele
 }
 
 .elementor-5579 .elementor-element.elementor-element-4d71bdd .elementor-progress-wrapper .elementor-progress-bar {
-    background-color: #1C58F6;
+    background-color: #F3DAD3;
 }
 
 .elementor-5579 .elementor-element.elementor-element-4d71bdd .elementor-progress-wrapper {
@@ -57494,7 +57495,7 @@ body:not(.rtl) .elementor-5579 .elementor-element.elementor-element-51a3b79 .ele
 }
 
 .elementor-5735 .elementor-element.elementor-element-56fc488 .themegoods-animated-headline span.ah-words-wrapper {
-    color: #1C58F6;
+    color: #F3DAD3;
 }
 
 .elementor-5735 .elementor-element.elementor-element-56fc488 .themegoods-animated-headline span.ah-words-wrapper b {
